feat: add game context and ball entity